# EventEaseURSB

./: README.md  firebase.json  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_event_ease/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart  progress.txt
lib/admin_pages/: admin_add_event_page.dart  admin_edit _event_page.dart  admin_edit_event_page.dart  admin_edit_profile_page.dart  admin_event_info_page.dart  admin_home_page.dart  admin_login_page.dart  admin_nav_page.dart  admin_profile_page.dart  event_manager_page.dart  participants_page.dart
lib/pages/: CCS_events_page.dart  COA_events_page.dart  COB_events_page.dart  admin_edit_event_page.dart  admin_page.dart  calendar_page.dart  edit_event_page.dart  edit_profile_page.dart  event_info_page.dart  home_page.dart  index_page.dart  login_page.dart  nav_page.dart  profile_page.dart  receipt_page.dart  register_page.dart  register_page_pt2.dart  reminders_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme.xml
macos/Runner/Configs/: AppInfo.xcconfig
runner/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
